# test_axa

./: .env  Dockerfile  README.md  app.py  call_psi.py  config.yaml  docker-compose.yml  input_example.json  prepare_build.py  pyproject.toml  requirements.txt
data/: dataset.xlsx
mlruns/255527899543619965/: meta.yaml
mlruns/255527899543619965/3d04c60c82c348b2895c2397a4d611a0/: meta.yaml
mlruns/255527899543619965/3d04c60c82c348b2895c2397a4d611a0/metrics/: best_iteration  train_auc  train_capture_top_1_class_deco  train_capture_top_1_class_meuble  train_capture_top_1_class_mlp  train_capture_top_2_class_deco  train_capture_top_2_class_meuble  train_capture_top_2_class_mlp  (+26 more)
mlruns/255527899543619965/b1c2eedd3ae44cea81fba05a961a0c64/: meta.yaml
mlruns/655603104255853188/: meta.yaml
mlruns/655603104255853188/2d5dc3a5ce3e44af97f2ebe2537c4fc1/: meta.yaml
mlruns/655603104255853188/3fb5e5c2a0dc466293241822d7417b7d/: meta.yaml
mlruns/655603104255853188/49eba937855d4f2cb44e528be998eadd/: meta.yaml
mlruns/655603104255853188/57e6894655984145b88e3469ef0d5a9a/: meta.yaml
mlruns/655603104255853188/7e81e525ff2c4698a00e11558c0fe4db/: meta.yaml
mlruns/655603104255853188/9c7fd5f8a0df478698872f5c54661d8a/: meta.yaml
mlruns/655603104255853188/a126db3b97fe4105a026d1c6342c223c/: meta.yaml
mlruns/655603104255853188/df65c117732648e0b1c6e8d778532e64/: meta.yaml
mlruns/655603104255853188/e13c6a6eb48c4d4a985a2beb0f70af20/: meta.yaml
mlruns/655603104255853188/f2b0179928964ab1b928169a5935594b/: meta.yaml
notebooks/: 01_baseline_and_first_gbm.ipynb  mlflow.db  utils.py
(+146 files in other folders)
