[project]
name = "axa"
version = "0.1.0"
description = ""
authors = [
    {name = "Berkani",email = "berkaniimad48@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2,<3.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (>=3.11.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "gunicorn (>=23.0,<24.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
xgboost = "^3.2.0"
catboost = "^1.2.10"
pyyaml = "^6.0.3"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
plotly = "^6.7.0"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.2.0"
