[project]
name = "test-axa"
version = "0.1.0"
description = ""
authors = [
    {name = "Berkani",email = "berkaniimad48@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly (>=6.7.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.2.0"

